--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <textarea id="post" name="post" rows="20" cols="30" placeholder="Write Comment" required></textarea>
                 <br>
                 <!-- Why is this line necessary -->
-                <div id="msg"></div>
+                <!-- <div id="msg"></div> -->
                 <button type="submit">Post</button>
             </form>
         </div>
